--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>demo app</title>
+  <meta name="description" content="Web4App.io – Decentralized AI meets Web4 infrastructure." />
+  <link rel="icon" href="/favicon.ico" />
+  <meta property="og:title" content="Web4App.io" />
+  <meta property="og:description" content="Decentralized AI meets Web4 infrastructure." />
+  <meta property="og:image" content="/og-image.png" />
+  <title>Web4App.io</title>
   <style>
     body {
       margin: 0;
@@ -102,6 +107,14 @@
       color: #61dafb;
       text-decoration: none;
     }
+    @media (max-width: 480px) {
+      #lola-chat {
+        width: 100%;
+        right: 0;
+        bottom: 0;
+        border-radius: 0;
+      }
+    }
   </style>
 </head>
 <body>
@@ -113,6 +126,7 @@
         <li><a href="#solutions">Solutions</a></li>
         <li><a href="#about">About</a></li>
         <li><a href="#launch">Launch App</a></li>
+        <li><a href="https://app.web4app.io" class="cta-button" target="_blank">Launch Web4App</a></li>
       </ul>
     </nav>
   </header>
@@ -192,12 +206,21 @@
 
       chatLog.innerHTML += `<div><strong>You:</strong> ${userInput}</div>`;
       chatInput.value = '';
-
-      await new Promise(res => setTimeout(res, 600));
-
-      const response = "I'm still learning! Soon I'll answer with AI magic. ✨";
-      chatLog.innerHTML += `<div><strong>Lola:</strong> ${response}</div>`;
       chatLog.scrollTop = chatLog.scrollHeight;
+
+      try {
+        const response = await fetch('https://api.web4app.io/lola-chat', {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify({ prompt: userInput })
+        });
+
+        const data = await response.json();
+        chatLog.innerHTML += `<div><strong>Lola:</strong> ${data.reply}</div>`;
+        chatLog.scrollTop = chatLog.scrollHeight;
+      } catch (error) {
+        chatLog.innerHTML += `<div><strong>Lola:</strong> ⚠️ Oops! Unable to connect to Lola's brain right now.</div>`;
+      }
     });
   </script>
 </body>
